// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TableHeader matches Default story snapshot 1`] = `
<div>
  <table>
    <thead>
      <tr>
        <th
          class="px-6 py-3 text-left text-xs font-medium text-gray-50 uppercase tracking-wider sticky top-0 z-20 bg-blue-500 shadow-sm first-of-type:max-w-[200px] first-of-type:truncate nth-of-type-2:sticky nth-of-type-2:top-0 nth-of-type-2:left-0 nth-of-type-2:z-30"
          data-testid="table-header-undefined"
        >
          <div
            class="flex items-center gap-2"
          >
            Header
          </div>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`TableHeader matches WithCanSort story snapshot 1`] = `
<div>
  <table>
    <thead>
      <tr>
        <th
          aria-sort="none"
          class="px-6 py-3 text-left text-xs font-medium text-gray-50 uppercase tracking-wider sticky top-0 z-20 bg-blue-500 shadow-sm first-of-type:max-w-[200px] first-of-type:truncate nth-of-type-2:sticky nth-of-type-2:top-0 nth-of-type-2:left-0 nth-of-type-2:z-30 cursor-pointer select-none hover:bg-blue-600"
          data-testid="table-header-sortable-column"
        >
          <div
            class="flex items-center gap-2"
          >
            Sortable Header
            <span
              class="text-gray-50"
            >
              <svg
                class="w-4 h-4"
                fill="currentColor"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M117.66,170.34a8,8,0,0,1,0,11.32l-32,32a8,8,0,0,1-11.32,0l-32-32a8,8,0,0,1,11.32-11.32L72,188.69V48a8,8,0,0,1,16,0V188.69l18.34-18.35A8,8,0,0,1,117.66,170.34Zm96-96-32-32a8,8,0,0,0-11.32,0l-32,32a8,8,0,0,0,11.32,11.32L168,67.31V208a8,8,0,0,0,16,0V67.31l18.34,18.35a8,8,0,0,0,11.32-11.32Z"
                />
              </svg>
            </span>
          </div>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`TableHeader matches WithCustomClassName story snapshot 1`] = `
<div>
  <table>
    <thead>
      <tr>
        <th
          class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider sticky top-0 z-20 shadow-sm first-of-type:max-w-[200px] first-of-type:truncate nth-of-type-2:sticky nth-of-type-2:top-0 nth-of-type-2:left-0 nth-of-type-2:z-30 bg-gray-800 text-white"
          data-testid="table-header-undefined"
        >
          <div
            class="flex items-center gap-2"
          >
            Custom Header
          </div>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;
